--- a/HelmChart/values.yaml
+++ b/HelmChart/values.yaml
@@ -7,7 +7,7 @@ replicaCount: #{replicaCount}#
 
 # This sets the container image more information can be found here: https://kubernetes.io/docs/concepts/containers/images/
 image:
-  repository: azdevopscourseregistry.azurecr.io/shoppingfrontend
+  repository: shoppingfrontend.azurecr.io/shoppingfrontend
   # Overrides the image tag whose default is the chart appVersion.
   tag: ""
 
